fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -45,8 +45,15 @@ h1 {
 .content-title,
 .benefits-title {
     color: #FFFFFF;
-    margin: 0;
+    margin-top: 0;
 }
+
+.price-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 
 .price-tag {
     display: flex;
@@ -65,6 +72,7 @@ h1 {
 
 .benefits-list {
     padding: 0;
+
 }
 
 .benefits-list li {
@@ -73,12 +81,16 @@ h1 {
     margin-bottom: .5rem;
 }
 
+.benefits-list:last-child {
+    margin-bottom: 0;
+}
 .cta {
     color: #FFFFFF;
     background-color: var(--bright-yellow);
     width: 100%;
     display: block;
     padding: 1rem;
+    margin: 1rem 0;
     text-align: center;
     border-radius: 5px;
     text-decoration: none;
@@ -114,12 +126,15 @@ h1 {
     background-color: #fff;
 }
 
+.price-col-1,
+.price-col-2 {
+    display: flex;
+    flex-direction: column;
+}
+
 .price-col-1 {
     background-color: var(--cyan);
     color: var(--light-gray);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
 }
 
 .price-col-2 {
@@ -149,12 +164,6 @@ h1 {
 @media only screen and (min-width: 650px) {
     .price-container {
         max-width: 80vw;
-    }
-
-    .hero-section,
-    .price-col-1,
-    .price-col-2 {
-        padding: 3rem;
     }
 
     .hero-info {
